# MidnightTasks

backend/: pyproject.toml
backend/app/: enums.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0be77c7bbdb8_first_migration_generate_main_models_.py  679ccc10582a_first_migration_generate_main_models_.py  70b57ce35ca2_rename_password_hashed_password.py  856319e61d13_initializate_role_for_user.py  cf2e2c142a7c_projectparticipant_model.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/board/: boards.py
backend/app/api/routers/column/: columns.py
backend/app/api/routers/comment/: comments.py
backend/app/api/routers/project/: projects.py
backend/app/api/routers/task/: assignments.py  tasks.py
backend/app/api/routers/user/: login.py  users.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/services/board/: __init__.py  board.py
backend/app/services/column/: column.py
backend/app/services/comment/: comment.py
backend/app/services/project/: project.py
backend/app/services/task/: assignment.py  task.py
backend/app/services/user/: user.py
backend/app/utils/: logger.py
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/: api.ts  middleware.ts
frontend/my-app/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/my-app/src/components/: AuthChecker.tsx  Button.tsx  Footer.tsx  Input.tsx  LoginForm.tsx  ProjectCreate.tsx  RegistrationForm.tsx  SideBar.tsx
frontend/my-app/src/store/: user.ts
(+6 files in other folders)
