[tool.poetry]
name = "backend"
version = "0.1.0"
description = "MidnightTasks backend"
authors = [
    "SmokingA1 <denisshokolad1221@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.42"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"